--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/adobe/aem-boilerplate#readme",
   "devDependencies": {
     "@babel/eslint-parser": "7.27.0",
-    "eslint": "8.57.1",
+    "@eslint/js": "^9.25.0",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.31.0",
+    "globals": "^16.0.0",
     "stylelint": "16.17.0",
     "stylelint-config-standard": "37.0.0"
   }
